Update to latest JEI API